0028748: XCAFDoc_GraphNode does not restore child on Undo

Fixed calling Backup method. Now it called where data really changed.